force-app/main/default/objects/Locations__c/fields/Current_assigned_headcount__c.field-meta.xml
<CustomField>
    <fullName>Current_assigned_headcount__c</fullName>
    <label>Current assigned headcount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>