force-app/main/default/objects/Locations__c/fields/Facility_Guard_Hours__c.field-meta.xml
<CustomField>
    <fullName>Facility_Guard_Hours__c</fullName>
    <label>Facility: Guard Hours</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>24 hrs/day x 365 days/yr</fullName>
            </value>
            <value>
                <fullName>Facility is not guarded</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>