force-app/main/default/objects/Locations__c/fields/Facility_Usage_Select_all_that_apply__c.field-meta.xml
<CustomField>
    <fullName>Facility_Usage_Select_all_that_apply__c</fullName>
    <label>Facility Usage (Select all that apply)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PCI Infrastructure</fullName>
            </value>
            <value>
                <fullName>Data Center (Unmanned)</fullName>
            </value>
            <value>
                <fullName>Audio Conference Co-Location Facility (VoIP)</fullName>
            </value>
            <value>
                <fullName>Call Center</fullName>
            </value>
            <value>
                <fullName>Office space for non-call center personnel</fullName>
            </value>
            <value>
                <fullName>Data Center (Manned)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>