force-app/main/default/objects/Locations__c/fields/If_Closed_When__c.field-meta.xml
<CustomField>
    <fullName>If_Closed_When__c</fullName>
    <inlineHelpText>If this location is inactive, what date did it close?</inlineHelpText>
    <label>If Closed, When?</label>
    <type>DateTime</type>
</CustomField>