force-app/main/default/objects/Locations__c/fields/Maximum_worker_capacity__c.field-meta.xml
<CustomField>
    <fullName>Maximum_worker_capacity__c</fullName>
    <label>Maximum worker capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>