force-app/main/default/objects/Locations__c/fields/Rack_Room_Access_control_type__c.field-meta.xml
<CustomField>
    <fullName>Rack_Room_Access_control_type__c</fullName>
    <label>Rack/Room: Access control type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Card access - card issued by landlord/vendor</fullName>
            </value>
            <value>
                <fullName>Card access - card issued by PGi</fullName>
            </value>
            <value>
                <fullName>Escort only</fullName>
            </value>
            <value>
                <fullName>Guard/Escort must unlock cage, doors, and/or racks</fullName>
            </value>
            <value>
                <fullName>Sign for key with facility Security</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>