force-app/main/default/objects/Locations__c/fields/Rack_Room_Entrance_has_camera__c.field-meta.xml
<CustomField>
    <fullName>Rack_Room_Entrance_has_camera__c</fullName>
    <label>Rack/Room: Entrance has camera?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes - monitored by personnel</fullName>
            </value>
            <value>
                <fullName>Yes - recorded only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>