force-app/main/default/objects/Locations__c/recordTypes/Location.recordType-meta.xml
<RecordType>
    <fullName>Location</fullName>
    <active>true</active>
    <label>Location</label>
</RecordType>