force-app/main/default/objects/Locations__c/listViews/Locations.listView-meta.xml
<ListView>
    <fullName>Locations</fullName>
    <columns>NAME</columns>
    <columns>Street__c</columns>
    <columns>City__c</columns>
    <columns>State_Province__c</columns>
    <columns>Zip_Postal_Code__c</columns>
    <columns>Country__c</columns>
    <columns>Region__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>Locations</label>
    <language>en_US</language>
</ListView>